<resources>
    <string name="app_name">TouristicAgency</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_enter">Enter</string>
    <string name="btn_reg_new_user">New User</string>
    <string name="email">E-mail:</string>
    <string name="password">Password:</string>
    <string name="connecting">Connecting...</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="lastname">Lastname:</string>
    <string name="cellnumber">Cellnumber:</string>
    <string name="name">Name:</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_search">Search</string>
    <string name="btn_clear_date">Clear date</string>
    <string name="hello">Hello!</string>
    <string name="date_from">Date from: </string>
    <string name="confirm_pass_erorr">Field \'\Password\'\ and \'\Password Confirm\'\ must be same!</string>
    <string name="email_error">Entered Email has already been registered!</string>
    <string name="choose_date">Click here to choose date</string>
    <string name="country">Country:</string>
    <string name="duration">Duration:</string>
    <string name="error">No such user or invalid password!</string>
    <string name="click_here">Click here to choose date</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="bougth_meassage">Our manager will call you soon.</string>
    <string name="my_tours">My Tours</string>
    <string name="my_profile">My Profile</string>
    <string name="exit">Exit</string>
    <string name="error_connection">Connection error. Try again later.</string>
    <string name="error_entering">Enter login and password!</string>
    <string name="btn_edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>

</resources>
