<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.14">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="@string/email" />

        <EditText
            android:id="@+id/etEmailPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.14">

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="@string/password" />

        <EditText
            android:id="@+id/etPasswordPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPassword"
            android:text="@string/password" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.14">

        <TextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="@string/confirm_password" />

        <EditText
            android:id="@+id/etConfPasswordPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPassword"
            android:text="@string/password" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.14">

        <TextView
            android:id="@+id/tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="@string/name" />

        <EditText
            android:id="@+id/etNamePF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.14">

        <TextView
            android:id="@+id/tv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="@string/lastname" />

        <EditText
            android:id="@+id/etLastNamePF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.14">

        <TextView
            android:id="@+id/tv6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.65"
            android:text="@string/cellnumber" />

        <EditText
            android:id="@+id/etCellnumberPF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:ems="10"
            android:inputType="textPersonName"
            android:enabled="false" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="0.14">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_ok" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>